"Add padding to the all-inclusive section to prevent overlap."

--- a/assets/css/marketing.css
+++ b/assets/css/marketing.css
@@ -307,7 +307,10 @@ background-color:rgb(37, 8, 155);
 
 /*All-inclusive section*/
 
+#All-inclusive {
 
+  padding-top: 4.2rem;
+}
 
 
 
